syntax = "proto3";

package shortener;

option go_package = "github.com/rycln/shorturl/api/gen/shortener";

import "google/protobuf/empty.proto";

message ShortenURLRequest {
  string original_url = 1;
}

message ShortenURLResponse {
  string short_url = 1;
}

message BatchShortenURLRequest {
  repeated BatchURLItem items = 1;
}

message BatchURLItem {
  string correlation_id = 1;
  string original_url = 2;
}

message BatchShortenURLResponse {
  repeated BatchResultItem items = 1;
}

message BatchResultItem {
  string correlation_id = 1;
  string short_url = 2;
}

message RetrieveURLRequest {
  string short_url = 1;
}

message RetrieveURLResponse {
  string original_url = 1;
}

message GetUserURLsResponse {
  repeated UserURLItem urls = 1;
}

message UserURLItem {
  string short_url = 1;      
  string original_url = 2;   
}

message DeleteUserURLsRequest {
  repeated string short_urls = 1; 
}

message GetStatsResponse {
  uint64 urls = 1;
  uint64 users = 2;
}

service ShortenerService {
  rpc ShortenURL (ShortenURLRequest) returns (ShortenURLResponse) {}
  rpc BatchShortenURL (BatchShortenURLRequest) returns (BatchShortenURLResponse) {}
  rpc RetrieveURL (RetrieveURLRequest) returns (RetrieveURLResponse) {}
  rpc GetUserURLs (google.protobuf.Empty) returns (GetUserURLsResponse) {}
  rpc DeleteUserURLs (DeleteUserURLsRequest) returns (google.protobuf.Empty) {}
  rpc Ping (google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc GetStats (google.protobuf.Empty) returns (GetStatsResponse) {}
}